Add the AutoUpdate feature

--- a/BatikLibrary/src/org/mongkie/lib/batik/Bundle.properties
+++ b/BatikLibrary/src/org/mongkie/lib/batik/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     Batik is a Java-based toolkit for applications or applets that want to use images in the Scalable Vector Graphics (SVG) format for various purposes, such as display, generation or manipulation.
 OpenIDE-Module-Name=Batik Library
