--- a/ColtLibrary/src/org/mongkie/lib/colt/Bundle.properties
+++ b/ColtLibrary/src/org/mongkie/lib/colt/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     Colt provides a set of Open Source Libraries for High Performance Scientific and Technical Computing in Java.
 OpenIDE-Module-Name=Colt Library
