--- a/ContextAPI/src/org/mongkie/context/Bundle.properties
+++ b/ContextAPI/src/org/mongkie/context/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Core API
+OpenIDE-Module-Display-Category=Context
 OpenIDE-Module-Long-Description=\
     Used by modules to implement Context UI service providers
 OpenIDE-Module-Name=Context API
