--- a/ContextUI/src/org/mongkie/ui/context/Bundle.properties
+++ b/ContextUI/src/org/mongkie/ui/context/Bundle.properties
@@ -1,7 +1,7 @@
 CTL_ContextAction=Context
 CTL_ContextTopComponent=Context
 HINT_ContextTopComponent=Context View
-OpenIDE-Module-Display-Category=Core UI
+OpenIDE-Module-Display-Category=Context
 OpenIDE-Module-Long-Description=\
     Provides UI components to display contextual information about other modules that provide Context UI implementations. \
     Default contexts for Groups and Visibility are built in the MONGKIE.
