--- a/EPSGraphicsLibrary/src/org/mongkie/lib/epsgraphics/Bundle.properties
+++ b/EPSGraphicsLibrary/src/org/mongkie/lib/epsgraphics/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     EpsGraphics is a Java library to output EPS graphics. \
     EpsGraphics is an extension of Graphics2D that allows you to draw to an EPS file as it was a Java graphics object. \
