--- a/FlamingoLibrary/src/org/mongkie/lib/flamingo/Bundle.properties
+++ b/FlamingoLibrary/src/org/mongkie/lib/flamingo/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     Flamingo provides a Swing implementation of the Office 2007 ribbon container and related components. \
     This build had been made for Insubstantial which is a maintenance fork of some of Kirill Grouchnikov's swing based projects. \
