--- a/GeneIDConverterAPI/src/org/mongkie/gic/Bundle.properties
+++ b/GeneIDConverterAPI/src/org/mongkie/gic/Bundle.properties
@@ -1,3 +1,5 @@
 OpenIDE-Module-Display-Category=Tools
+OpenIDE-Module-Long-Description=\
+    Maps gene ids to another id system.
 OpenIDE-Module-Name=GeneID Converter API
-OpenIDE-Module-Short-Description=API for Gene ID converting
+OpenIDE-Module-Short-Description=Gene ID Converter API
