--- a/HeatMapLibrary/src/org/mongkie/lib/heatmap/Bundle.properties
+++ b/HeatMapLibrary/src/org/mongkie/lib/heatmap/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     Draws the heat map in a JPanel
 OpenIDE-Module-Name=HeatMap Library
