--- a/InteractionManagerAPI/src/org/mongkie/im/Bundle.properties
+++ b/InteractionManagerAPI/src/org/mongkie/im/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Core API
+OpenIDE-Module-Display-Category=Interaction Sources
 OpenIDE-Module-Long-Description=\
     Abstraction of interaction sources and actions. \
     Also provides Graph Interaction Source for local interactions that may be imported from local files or remote databases.
