--- a/InteractionManagerUI/src/org/mongkie/ui/im/Bundle.properties
+++ b/InteractionManagerUI/src/org/mongkie/ui/im/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Core UI
+OpenIDE-Module-Display-Category=Interaction Sources
 OpenIDE-Module-Long-Description=\
     Provides the control pop-up panel with various widgets, which are added into the top of a network display window, to manage interactions.
 OpenIDE-Module-Name=InteractionManager UI
