--- a/JFreeChartLibrary/src/org/mongkie/lib/jfreechart/Bundle.properties
+++ b/JFreeChartLibrary/src/org/mongkie/lib/jfreechart/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     A free Java chart library that supports pie charts (2D and 3D), bar charts (horizontal and vertical, regular and stacked), line charts, scatter plots, time series charts, high-low-open-close charts, candlestick plots, Gantt charts, combined plots, thermometers, dials and more. \
     JFreeChart can be used in applications, applets, servlets and JSP. \
