--- a/KOPathDatabaseAPI/src/org/mongkie/kopath/Bundle.properties
+++ b/KOPathDatabaseAPI/src/org/mongkie/kopath/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Core API
+OpenIDE-Module-Display-Category=Pathway
 OpenIDE-Module-Long-Description=\
     REST client to query the human integrated pathway database, hiPathDB.
 OpenIDE-Module-Name=KOPath Database API
