--- a/KOPathVisualizationUI/src/org/mongkie/ui/kopath/Bundle.properties
+++ b/KOPathVisualizationUI/src/org/mongkie/ui/kopath/Bundle.properties
@@ -7,7 +7,7 @@ CTL_PathwaySearchTopComponent=Search
 HINT_PathwayDisplayTopComponent=This is a PathwayDisplay window
 HINT_PathwayExplorerTopComponent=This is a PathwayExplorer window
 HINT_PathwaySearchTopComponent=This is a PathwaySearch window
-OpenIDE-Module-Display-Category=Core UI
+OpenIDE-Module-Display-Category=Pathway
 OpenIDE-Module-Long-Description=\
     Provides an intergrated pathway visualization UI consisting of dispay window, search and result window and explorer window.
 OpenIDE-Module-Name=KOPath Visualization UI
