--- a/LayoutAPI/src/org/mongkie/layout/Bundle.properties
+++ b/LayoutAPI/src/org/mongkie/layout/Bundle.properties
@@ -1,6 +1,6 @@
 OpenIDE-Module-Display-Category=Graph Layout
 OpenIDE-Module-Long-Description=\
-    Abstraction of Graph layout builders with their own propery. \
+    Abstraction of Graph layout builders with their own properties. \
     Also provides an API to composite or extend the existing prefuse layouts.
 OpenIDE-Module-Name=Layout API
 OpenIDE-Module-Short-Description=Grpah Layout API and SPI
