--- a/PipelineUI/src/org/mongkie/ui/pipeline/Bundle.properties
+++ b/PipelineUI/src/org/mongkie/ui/pipeline/Bundle.properties
@@ -1,7 +1,7 @@
 CTL_PipelineAction=Pipeline
 CTL_PipelineTopComponent=Pipeline
 HINT_PipelineTopComponent=This is a Pipeline window
-OpenIDE-Module-Display-Category=Core UI
+OpenIDE-Module-Display-Category=Pipeline
 OpenIDE-Module-Name=Pipeline UI
 OpenIDE-Module-Short-Description=Analysis Pipeline UI
 PipelineTopComponent.wizardButtion.toolTipText=Pipeline Wizard
