--- a/PrefuseLibrary/src/org/mongkie/lib/prefuse/Bundle.properties
+++ b/PrefuseLibrary/src/org/mongkie/lib/prefuse/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     prefuse is a Java-based toolkit for building interactive information visualization applications. \
     Prefuse supports a rich set of features for data modeling, visualization, and interaction. \
