--- a/SeriesDataAPI/src/org/mongkie/series/Bundle.properties
+++ b/SeriesDataAPI/src/org/mongkie/series/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Core API
+OpenIDE-Module-Display-Category=Series Analysis
 OpenIDE-Module-Long-Description=\
     Provides a data model and controller to import and display series data.
 OpenIDE-Module-Name=SeriesData API
