--- a/SeriesDataUI/src/org/mongkie/ui/series/Bundle.properties
+++ b/SeriesDataUI/src/org/mongkie/ui/series/Bundle.properties
@@ -1,7 +1,7 @@
 CTL_HeatMapAction=Heat Map
 CTL_HeatMapTopComponent=Heat Map
 HINT_HeatMapTopComponent=This is a HeatMap window
-OpenIDE-Module-Display-Category=Core UI
+OpenIDE-Module-Display-Category=Series Analysis
 OpenIDE-Module-Long-Description=\
     An importer UI to import series data and heatmap to display the imported data. \
     Also provides a slider with animation to navigate the series data.
