--- a/SwingXLibrary/src/org/mongkie/lib/swingx/Bundle.properties
+++ b/SwingXLibrary/src/org/mongkie/lib/swingx/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     SwingX contains extensions to the Swing GUI toolkit, including new and enhanced components that provide functionality commonly required by rich client applications.
 OpenIDE-Module-Name=SwingX Library
