--- a/ValidationAPI/src/org/mongkie/validation/Bundle.properties
+++ b/ValidationAPI/src/org/mongkie/validation/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Core API
 OpenIDE-Module-Long-Description=\
     A simple library for retrofitting user-interface input validation to Swing applications.
 OpenIDE-Module-Name=Validation API
