--- a/VisualItemEditorAPI/src/org/mongkie/visualedit/Bundle.properties
+++ b/VisualItemEditorAPI/src/org/mongkie/visualedit/Bundle.properties
@@ -1,10 +1,10 @@
-OpenIDE-Module-Display-Category=Core API
+EditItems.visual.properties.displayName=Visual Properties
+EditItems.group.properties.displayName=Group Properties
+EditItems.member.properties.displayName=Member Properties
+EditItems.label.displayName=Label
+OpenIDE-Module-Display-Category=Visual Style
 OpenIDE-Module-Long-Description=\
     Abstraction of Visual Edit to edit visual propertiers of nodes, edges and groups. \
     Also provides various base visual edit implementations and their UIs.
 OpenIDE-Module-Name=VisualItem Editor API
 OpenIDE-Module-Short-Description=Visual Item Editor API and SPI
-EditItems.visual.properties.displayName=Visual Properties
-EditItems.group.properties.displayName=Group Properties
-EditItems.member.properties.displayName=Member Properties
-EditItems.label.displayName=Label
