--- a/VisualItemEditorUI/src/org/mongkie/ui/visualedit/Bundle.properties
+++ b/VisualItemEditorUI/src/org/mongkie/ui/visualedit/Bundle.properties
@@ -1,7 +1,7 @@
 CTL_VisualEditorAction=Editor
 CTL_VisualEditorTopComponent=Editor
 HINT_VisualEditorTopComponent=This is a Editor window
-OpenIDE-Module-Display-Category=Mongkie UI
+OpenIDE-Module-Display-Category=Visual Style
 OpenIDE-Module-Long-Description=\
     A window to display editors to edit visual properties of selected visual items.
 OpenIDE-Module-Name=VisualItem Editor UI
