--- a/VisualMappingAPI/src/org/mongkie/visualmap/Bundle.properties
+++ b/VisualMappingAPI/src/org/mongkie/visualmap/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Core API
+OpenIDE-Module-Display-Category=Visual Style
 OpenIDE-Module-Long-Description=\
     Astraction of continuous (ranking) and discrete (parition) visual mapping.
 OpenIDE-Module-Name=VisualMapping API
