--- a/VisualMappingPlugins/src/org/mongkie/vm/plugins/Bundle.properties
+++ b/VisualMappingPlugins/src/org/mongkie/vm/plugins/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Plugins
+OpenIDE-Module-Display-Category=Visual Style
 OpenIDE-Module-Long-Description=\
     Implements coninuous data-to-visual transformers, attribute mapping builders.
 OpenIDE-Module-Name=VisualMapping Plugins
