--- a/VisualMappingUI/src/org/mongkie/ui/visualmap/Bundle.properties
+++ b/VisualMappingUI/src/org/mongkie/ui/visualmap/Bundle.properties
@@ -1,7 +1,7 @@
 CTL_VisualMapAction=Visual Mapping
 CTL_VisualMapTopComponent=Visual Mapping
 HINT_VisualMapTopComponent=Continuous and Discrete Data-to-Visual Mapping
-OpenIDE-Module-Display-Category=Core UI
+OpenIDE-Module-Display-Category=Visual Style
 OpenIDE-Module-Long-Description=\
     Provides UI components to switch between two mapping (continuous or discrete) mode, actions to configure and run the data-to-visual mapping.
 OpenIDE-Module-Name=VisualMapping UI
