--- a/WidgetsLibrary/nbproject/project.properties
+++ b/WidgetsLibrary/nbproject/project.properties
@@ -1,5 +1,6 @@
 file.reference.colorchooser-1.0-SNAPSHOT.jar=release/modules/ext/colorchooser-1.0-SNAPSHOT.jar
 file.reference.miglayout-3.7.4-swing.jar=release/modules/ext/miglayout-3.7.4-swing.jar
 file.reference.timingframework-swing-3.0.jar=release/modules/ext/timingframework-swing-3.0.jar
+is.autoload=true
 javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
