--- a/WidgetsLibrary/src/org/mongkie/lib/widgets/Bundle.properties
+++ b/WidgetsLibrary/src/org/mongkie/lib/widgets/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     Useful and rich Swing UI components of the MONGKIE platform.
 OpenIDE-Module-Name=Widgets Library
