--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -10,26 +10,26 @@ auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=true
 modules=\
     ${project.org.mongkie.lib.epsgraphics}:\
     ${project.org.mongkie.ui.visualization}:\
-    ${project.org.mongkie.visualization.api}:\
-    ${project.org.mongkie.visualedit.api}:\
+    ${project.org.mongkie.visualization}:\
+    ${project.org.mongkie.visualedit}:\
     ${project.org.mongkie.ui.visualedit}:\
     ${project.org.mongkie.ui.layout}:\
-    ${project.org.mongkie.layout.api}:\
-    ${project.org.mongkie.layout.plugin}:\
+    ${project.org.mongkie.layout}:\
+    ${project.org.mongkie.layout.plugins}:\
     ${project.org.mongkie.lib.widgets}:\
     ${project.org.mongkie.ui.overview}:\
     ${project.org.mongkie.ui.datatable}:\
     ${project.org.mongkie.ui.context}:\
     ${project.org.mongkie.lib.heatmap}:\
     ${project.org.mongkie.ui.series}:\
-    ${project.org.mongkie.series.api}:\
-    ${project.org.mongkie.api.datatable}:\
-    ${project.org.mongkie.perspective.api}:\
+    ${project.org.mongkie.series}:\
+    ${project.org.mongkie.datatable}:\
+    ${project.org.mongkie.perspective}:\
     ${project.org.mongkie.ui.perspective}:\
     ${project.org.mongkie.desktop.branding}:\
-    ${project.org.mongkie.ui.kopathviz}:\
+    ${project.org.mongkie.ui.kopath}:\
     ${project.org.mongkie.lib.swingx}:\
-    ${project.org.mongkie.kopathdb.api}:\
+    ${project.org.mongkie.kopath}:\
     ${project.org.mongkie.longtask}:\
     ${project.org.mongkie.lib.batik}:\
     ${project.org.mongkie.lib.flamingo}:\
@@ -38,7 +38,7 @@ modules=\
     ${project.org.mongkie.kopath.viz}:\
     ${project.org.mongkie.clustering}:\
     ${project.org.mongkie.ui.clustering}:\
-    ${project.org.mongkie.clustering.plugin}:\
+    ${project.org.mongkie.clustering.plugins}:\
     ${project.org.mongkie.ui.pipeline}:\
     ${project.org.mongkie.lib.colt}:\
     ${project.org.mongkie.importer}:\
@@ -64,9 +64,9 @@ modules=\
     ${project.org.mongkie.filter}:\
     ${project.org.mongkie.context}:\
     ${project.org.mongkie.lib.jfreechart}
-project.org.mongkie.api.datatable=DataTableAPI
+project.org.mongkie.datatable=DataTableAPI
 project.org.mongkie.clustering=ClusteringAPI
-project.org.mongkie.clustering.plugin=ClusteringPlugins
+project.org.mongkie.clustering.plugins=ClusteringPlugins
 project.org.mongkie.context=ContextAPI
 project.org.mongkie.desktop.branding=DesktopBranding
 project.org.mongkie.enrichment=EnrichmentAnalysisAPI
@@ -81,9 +81,9 @@ project.org.mongkie.im=InteractionManagerAPI
 project.org.mongkie.importer=ImportAPI
 project.org.mongkie.importer.plugins=ImportPlugins
 project.org.mongkie.kopath.viz=KOPathVisualizationAPI
-project.org.mongkie.kopathdb.api=KOPathDatabaseAPI
-project.org.mongkie.layout.api=LayoutAPI
-project.org.mongkie.layout.plugin=LayoutPlugins
+project.org.mongkie.kopath=KOPathDatabaseAPI
+project.org.mongkie.layout=LayoutAPI
+project.org.mongkie.layout.plugins=LayoutPlugins
 project.org.mongkie.lib.batik=BatikLibrary
 project.org.mongkie.lib.colt=ColtLibrary
 project.org.mongkie.lib.epsgraphics=EPSGraphicsLibrary
@@ -97,8 +97,8 @@ project.org.mongkie.lib.swingx=SwingXLibrary
 project.org.mongkie.lib.widgets=WidgetsLibrary
 project.org.mongkie.longtask=LongTaskAPI
 project.org.mongkie.mimi=MiMI
-project.org.mongkie.perspective.api=PerspectiveAPI
-project.org.mongkie.series.api=SeriesDataAPI
+project.org.mongkie.perspective=PerspectiveAPI
+project.org.mongkie.series=SeriesDataAPI
 project.org.mongkie.ui.clustering=ClusteringUI
 project.org.mongkie.ui.context=ContextUI
 project.org.mongkie.ui.datatable=DataTableUI
@@ -106,7 +106,7 @@ project.org.mongkie.ui.enrichment=EnrichmentAnalysisUI
 project.org.mongkie.ui.exporter=ExportUI
 project.org.mongkie.ui.im=InteractionManagerUI
 project.org.mongkie.ui.importer=ImportUI
-project.org.mongkie.ui.kopathviz=KOPathVisualizationUI
+project.org.mongkie.ui.kopath=KOPathVisualizationUI
 project.org.mongkie.ui.layout=LayoutUI
 project.org.mongkie.ui.overview=OverviewUI
 project.org.mongkie.ui.perspective=PerspectiveUI
@@ -116,10 +116,10 @@ project.org.mongkie.ui.visualedit=VisualItemEditorUI
 project.org.mongkie.ui.visualization=VisualizationUI
 project.org.mongkie.ui.visualmap=VisualMappingUI
 project.org.mongkie.validation=ValidationAPI
-project.org.mongkie.visualedit.api=VisualItemEditorAPI
-project.org.mongkie.visualization.api=VisualizationAPI
-project.license=mongkie
+project.org.mongkie.visualedit=VisualItemEditorAPI
+project.org.mongkie.visualization=VisualizationAPI
 project.org.mongkie.visualmap=VisualMappingAPI
 project.org.mongkie.vm.plugins=VisualMappingPlugins
+project.license=mongkie
 run.args.extra=--locale en -J-Xms256m -J-Xmx1024m
 app.conf=nbproject/mongkie.conf
