--- a/JavaCSVLibrary/src/org/mongkie/lib/javacsv/Bundle.properties
+++ b/JavaCSVLibrary/src/org/mongkie/lib/javacsv/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     Java CSV is a small fast open source java library for reading and writing CSV and plain delimited text files. \
     All kinds of CSV files can be handled, text qualified, Excel formatted, etc.
