--- a/KOPathVisualizationAPI/src/org/mongkie/kopath/viz/Bundle.properties
+++ b/KOPathVisualizationAPI/src/org/mongkie/kopath/viz/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Core API
+OpenIDE-Module-Display-Category=Pathway
 OpenIDE-Module-Long-Description=\
     Defines a display panel to display the pathway, data nodes for pathway entities and relations, swing workers to retrieve and expand pathways.
 OpenIDE-Module-Name=KOPath Visualization API
