--- a/LongTaskAPI/src/org/mongkie/longtask/Bundle.properties
+++ b/LongTaskAPI/src/org/mongkie/longtask/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Core API
 OpenIDE-Module-Long-Description=\
     Provides APIs to execute long threaded task.
 OpenIDE-Module-Name=LongTask API
