--- a/LuceneLibrary/src/org/mongkie/lib/lucene/Bundle.properties
+++ b/LuceneLibrary/src/org/mongkie/lib/lucene/Bundle.properties
@@ -1,4 +1,4 @@
-OpenIDE-Module-Display-Category=Base Libraries
+OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
     Apache Lucene\u2122 is a high-performance, full-featured text search engine library written entirely in Java. \
     It is a technology suitable for nearly any application that requires full-text search, especially cross-platform.
